<resources>
    <string name="app_name">Rumah Pintar</string>
    <string name="nav_home">Beranda</string>
    <string name="nav_video">Video</string>
    <string name="nav_profile">Profile</string>

    <string name="search">Search</string>
    <string name="video_pembelajaran">Video Pembelajaran</string>
    <string name="image_thumbnail_video_pembelajaran">Image Thumbnail Video Pembelajaran</string>
    <string name="image_play_button">Image Play Button</string>
    <string name="example_title_cardvideo">Belajar Bahasa Inggris</string>
    <string name="sd">SD</string>
    <string name="smp">SMP</string>
    <string name="sma">SMA</string>
    <string name="dinas">DINAS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profil_setting">Setting</string>
    <string name="profil_langganan">Langganan</string>
    <string name="profil_logout">Logout</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="setting_header">Setting</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>