<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".video.VideoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/title_video_pembelajaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_pembelajaran"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_search_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/home_searchbox"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_video_pembelajaran">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/search"
            android:src="@drawable/home_search_icon" />

        <EditText
            android:id="@+id/edt_search_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:autofillHints="0"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:lines="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="14sp" />

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_category_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:checkedChip="@id/chip_cat_sd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_search_video"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cat_sd"
            style="@style/customChipStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/sd"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cat_smp"
            style="@style/customChipStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/smp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cat_sma"
            style="@style/customChipStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/sma"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cat_dinas"
            style="@style/customChipStyle"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/dinas"
            android:textAlignment="center"
            android:textStyle="bold" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/rv_videos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cg_category_video"
        tools:listitem="@layout/item_vidcategory" />

</androidx.constraintlayout.widget.ConstraintLayout>