<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_video_pembelajaran"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/md_blue_500">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_thumbnail_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_thumbnail_video_pembelajaran" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/video_play"
                android:layout_centerInParent="true"
                android:contentDescription="@string/image_play_button" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_alignParentBottom="true"
                android:background="@color/md_grey_900"
                android:alpha="0.5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_carditem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_title_cardvideo"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:textStyle="bold"
                android:textColor="@color/white" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:background="@color/md_grey_400" />

</LinearLayout>